# local-gaze

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.agent/: context.sh  memory.md  roadmap.md
.claude/: settings.json
.claude/commands/: session-prompt.md
.serena/: project.yml
docs/: adr.md  build-spec.md  environment-facts.md  security-privacy.md
docs/research/: cv-models.md  gnome50-extension.md  gnome50-verified-host.md  openvino-npu.md  packaging-dbus.md  safety-security.md
extension/: extension.js  metadata.json  prefs.js  stylesheet.css
extension/lib/: overlay.js  quicktoggle.js  ratelimit.js  service.js  session.js  token.js  windows.js  workspace.js
extension/schemas/: org.gnome.shell.extensions.local-gaze.gschema.xml
models/: MANIFEST
prompts/: future-session.md
scripts/: fetch-models.sh  host-exec.sh  host-probe
src/local_gaze/: __init__.py  cli.py  commands.py  config.py  daemon.py  logging_setup.py  paths.py  session.py  types.py
src/local_gaze/calibration/: __init__.py  model.py  run.py
src/local_gaze/interpret/: __init__.py  gaze.py  gestures.py  interpreter.py  smoothing.py
src/local_gaze/ipc/: __init__.py  client.py  schema.py  token.py
src/local_gaze/perception/: __init__.py  base.py  camera.py  mock.py  models.py  openvino_backend.py  (+1 more)
systemd/: local-gaze.service
tests/: conftest.py  fake_extension.py  test_calibration.py  test_config.py  test_gaze.py  test_gestures.py  test_interpreter.py  test_ipc.py  test_schema.py  test_session.py  test_smoothing.py  test_synthetic.py  test_token.py  test_types.py
